k8s/rails-deployment.yml
# k8s/rails-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
        - name: rails
          image: ishusharmaishan/rails-postgres-app # Updated with your Docker Hub username
          ports:
            - containerPort: 3000
